[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4.82",
    "flask>=3.1.1",
    "nest-asyncio>=1.6.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "telegram>=0.0.1",
    "waitress>=3.0.2",
]
