[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hopperx"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot==13.15",
    "ccxt==4.0.0",
    "pandas",
    "requests",
    "flask",
    "schedule",
    "nest_asyncio"
]
